# Cascavel-CSV

./: CMakeLists.txt  LEIA-ME.txt  README.md
examples/: estoque.csv
include/: console.h  rol.h  runtime_exc.h  sqlite_api.h  str_util.h
src/: console.cpp  main.cpp  print.cc  rol.cpp  sqlite_api.cpp  str_util.cpp
